fix(P-27): hide close button list item from screen readers when invisible visually

--- a/src/components/GlobalNavigation/components/TabletView/TabletView.module.css
+++ b/src/components/GlobalNavigation/components/TabletView/TabletView.module.css
@@ -110,6 +110,16 @@
   }
 }
 
+.menuOpen {
+  pointer-events: auto;
+  visibility: visible;
+}
+
+.menuClosed {
+  pointer-events: none;
+  visibility: hidden;
+}
+
 .promotionCard {
   transform: translateY(-5px);
 }
